--- a/index.html
+++ b/index.html
@@ -4,44 +4,115 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="/assets/css/style.css" />
+        <link rel="stylesheet" href="/assets/css/style-reff.css" />
         <script src="/assets/js/script.js" defer></script>
         <title>Dashboard</title>
     </head>
     <body>
         <header>
-            <div class="top-half">
-                <input type="text" />
-                <ul>
-                    <li>
-                        <button>Theme</button>
-                    </li>
-                    <li>
-                        <button>Notif</button>
-                    </li>
-                    <li>
-                        <button>Github</button>
-                    </li>
-                </ul>
+            <div>
+                <input type="text" class="input" placeholder="Search..." />
             </div>
-            <div class="lower-half">
-                <h1>Hero</h1>
-                <ul>
-                    <li>
-                        <a>New</a>
-                    </li>
-                    <li>
-                        <a>Upload</a>
-                    </li>
-                    <li>
-                        <a>Share</a>
-                    </li>
-                </ul>
-            </div>
+            <ul>
+                <li>
+                    <button id="theme" role="button" class="flip-box">
+                        <div class="flip-box-inner">
+                            <div class="flip-box-front">
+                                <svg
+                                    xmlns="http://www.w3.org/2000/svg"
+                                    viewBox="0 0 24 24"
+                                    class="theme-button"
+                                    id="sun"
+                                >
+                                    <title>weather-sunny</title>
+                                    <path
+                                        d="M12,7A5,5 0 0,1 17,12A5,5 0 0,1 12,17A5,5 0 0,1 7,12A5,5 0 0,1 12,7M12,9A3,3 0 0,0 9,12A3,3 0 0,0 12,15A3,3 0 0,0 15,12A3,3 0 0,0 12,9M12,2L14.39,5.42C13.65,5.15 12.84,5 12,5C11.16,5 10.35,5.15 9.61,5.42L12,2M3.34,7L7.5,6.65C6.9,7.16 6.36,7.78 5.94,8.5C5.5,9.24 5.25,10 5.11,10.79L3.34,7M3.36,17L5.12,13.23C5.26,14 5.53,14.78 5.95,15.5C6.37,16.24 6.91,16.86 7.5,17.37L3.36,17M20.65,7L18.88,10.79C18.74,10 18.47,9.23 18.05,8.5C17.63,7.78 17.1,7.15 16.5,6.64L20.65,7M20.64,17L16.5,17.36C17.09,16.85 17.62,16.22 18.04,15.5C18.46,14.77 18.73,14 18.87,13.21L20.64,17M12,22L9.59,18.56C10.33,18.83 11.14,19 12,19C12.82,19 13.63,18.83 14.37,18.56L12,22Z"
+                                    />
+                                </svg>
+                            </div>
+                            <div class="flip-box-back">
+                                <svg
+                                    xmlns="http://www.w3.org/2000/svg"
+                                    viewBox="0 0 24 24"
+                                    class="theme-button"
+                                    id="moon"
+                                >
+                                    <title>weather-night</title>
+                                    <path
+                                        d="M17.75,4.09L15.22,6.03L16.13,9.09L13.5,7.28L10.87,9.09L11.78,6.03L9.25,4.09L12.44,4L13.5,1L14.56,4L17.75,4.09M21.25,11L19.61,12.25L20.2,14.23L18.5,13.06L16.8,14.23L17.39,12.25L15.75,11L17.81,10.95L18.5,9L19.19,10.95L21.25,11M18.97,15.95C19.8,15.87 20.69,17.05 20.16,17.8C19.84,18.25 19.5,18.67 19.08,19.07C15.17,23 8.84,23 4.94,19.07C1.03,15.17 1.03,8.83 4.94,4.93C5.34,4.53 5.76,4.17 6.21,3.85C6.96,3.32 8.14,4.21 8.06,5.04C7.79,7.9 8.75,10.87 10.95,13.06C13.14,15.26 16.1,16.22 18.97,15.95M17.33,17.97C14.5,17.81 11.7,16.64 9.53,14.5C7.36,12.31 6.2,9.5 6.04,6.68C3.23,9.82 3.34,14.64 6.35,17.66C9.37,20.67 14.19,20.78 17.33,17.97Z"
+                                    />
+                                </svg>
+                            </div>
+                        </div>
+                    </button>
+                </li>
+                <li>
+                    <button>
+                        <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            viewBox="0 0 24 24"
+                            class="icons-2"
+                        >
+                            <title>bell-badge-outline</title>
+                            <path
+                                d="M19 17V11.8C18.5 11.9 18 12 17.5 12H17V18H7V11C7 8.2 9.2 6 12 6C12.1 4.7 12.7 3.6 13.5 2.7C13.2 2.3 12.6 2 12 2C10.9 2 10 2.9 10 4V4.3C7 5.2 5 7.9 5 11V17L3 19V20H21V19L19 17M10 21C10 22.1 10.9 23 12 23S14 22.1 14 21H10M21 6.5C21 8.4 19.4 10 17.5 10S14 8.4 14 6.5 15.6 3 17.5 3 21 4.6 21 6.5"
+                            />
+                        </svg>
+                    </button>
+                </li>
+                <li>
+                    <button>
+                        <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            viewBox="0 0 24 24"
+                            class="icons-2"
+                        >
+                            <title>github</title>
+                            <path
+                                d="M12,2A10,10 0 0,0 2,12C2,16.42 4.87,20.17 8.84,21.5C9.34,21.58 9.5,21.27 9.5,21C9.5,20.77 9.5,20.14 9.5,19.31C6.73,19.91 6.14,17.97 6.14,17.97C5.68,16.81 5.03,16.5 5.03,16.5C4.12,15.88 5.1,15.9 5.1,15.9C6.1,15.97 6.63,16.93 6.63,16.93C7.5,18.45 8.97,18 9.54,17.76C9.63,17.11 9.89,16.67 10.17,16.42C7.95,16.17 5.62,15.31 5.62,11.5C5.62,10.39 6,9.5 6.65,8.79C6.55,8.54 6.2,7.5 6.75,6.15C6.75,6.15 7.59,5.88 9.5,7.17C10.29,6.95 11.15,6.84 12,6.84C12.85,6.84 13.71,6.95 14.5,7.17C16.41,5.88 17.25,6.15 17.25,6.15C17.8,7.5 17.45,8.54 17.35,8.79C18,9.5 18.38,10.39 18.38,11.5C18.38,15.32 16.04,16.16 13.81,16.41C14.17,16.72 14.5,17.33 14.5,18.26C14.5,19.6 14.5,20.68 14.5,21C14.5,21.27 14.66,21.59 15.17,21.5C19.14,20.16 22,16.42 22,12A10,10 0 0,0 12,2Z"
+                            />
+                        </svg>
+                    </button>
+                </li>
+            </ul>
         </header>
+        <div id="welcome">
+            <h1 style="display: flex; align-items: center">
+                <img
+                    src="/assets/icons/The Odin Project_logo.svg"
+                    alt=""
+                    style="width: 50px; height: 50px; display: inline"
+                />
+                The Odin Project
+            </h1>
+            <ul>
+                <li>
+                    <a>New</a>
+                </li>
+                <li>
+                    <a>Upload</a>
+                </li>
+                <li>
+                    <a>Share</a>
+                </li>
+            </ul>
+        </div>
         <main><div class="container">project</div></main>
         <aside>
             <h1 class="sidebar-dashboard">
-                <a href="">Dashboard </a>
+                <a href="">
+                    <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        viewBox="0 0 24 24"
+                        class="icons"
+                    >
+                        <title>view-dashboard</title>
+                        <path
+                            d="M13,3V9H21V3M13,21H21V11H13M3,21H11V15H3M3,13H11V3H3V13Z"
+                        />
+                    </svg>
+                    Dashboard
+                </a>
                 <svg
                     xmlns="http://www.w3.org/2000/svg"
                     viewBox="0 0 24 24"
