--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="/assets/css/style.css" />
         <link rel="stylesheet" href="/assets/css/style-reff.css" />
         <script src="/assets/js/script.js" defer></script>
+        <script src="/assets/js/theme.js" defer></script>
         <title>Dashboard</title>
     </head>
     <body>
@@ -97,7 +98,141 @@
                 </li>
             </ul>
         </div>
-        <main><div class="container">project</div></main>
+        <main>
+            <div class="container">
+                <h3>Your Project</h3>
+                <div class="articles">
+                    <article class="project">
+                        <div class="bg-1 bg"></div>
+                        <div class="layer"></div>
+                        <div class="description">
+                            <h3 class="p-title">Facebook</h3>
+                            <p>The UI design of Facebook</p>
+                            <button>demo</button>
+                            <button>code</button>
+                        </div>
+                    </article>
+                    <article class="project">
+                        <div class="bg-1 bg"></div>
+                        <div class="layer"></div>
+                        <div class="description">
+                            <h3 class="p-title">Facebook</h3>
+                            <p>
+                                The UI design of Facebook Lorem ipsum dolor, sit
+                                amet consectetur adipisicing elit. Porro magnam
+                                illum, cumque consectetur aut repellat possimus
+                                ratione magni laborum beatae impedit quos
+                                accusamus totam, quibusdam ab, libero delectus
+                                omnis soluta.
+                            </p>
+                            <button>demo</button>
+                            <button>code</button>
+                        </div>
+                    </article>
+                    <article class="project">
+                        <div class="bg-1 bg"></div>
+                        <div class="layer"></div>
+                        <div class="description">
+                            <h3 class="p-title">Facebook</h3>
+                            <p>
+                                The UI design of Facebook Lorem ipsum dolor, sit
+                                amet consectetur adipisicing elit. Porro magnam
+                                illum, cumque consectetur aut repellat possimus
+                                ratione magni laborum beatae impedit quos
+                                accusamus totam, quibusdam ab, libero delectus
+                                omnis soluta.
+                            </p>
+                            <button>demo</button>
+                            <button>code</button>
+                        </div>
+                    </article>
+                    <article class="project">
+                        <div class="bg-1 bg"></div>
+                        <div class="layer"></div>
+                        <div class="description">
+                            <h3 class="p-title">Facebook</h3>
+                            <p>
+                                The UI design of Facebook Lorem ipsum dolor, sit
+                                amet consectetur adipisicing elit. Porro magnam
+                                illum, cumque consectetur aut repellat possimus
+                                ratione magni laborum beatae impedit quos
+                                accusamus totam, quibusdam ab, libero delectus
+                                omnis soluta.
+                            </p>
+                            <button>demo</button>
+                            <button>code</button>
+                        </div>
+                    </article>
+                </div>
+            </div>
+
+            <div class="board">
+                <div class="announcement">
+                    <h3>Announcement</h3>
+                    <div class="card">
+                        <div class="card-item">
+                            <h4>Site Maintenance</h4>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur,
+                                adipisicing elit. Adipisci iure delectus
+                                accusantium! Sint, vero cum. Officia
+                                exercitationem temporibus nulla sunt, dolores ea
+                                nostrum veniam, consectetur voluptatum a porro
+                                minus ratione?
+                            </p>
+                        </div>
+                        <span class="bar"></span>
+                        <div>
+                            <h4>Comunity</h4>
+                            <p>
+                                Officia exercitationem temporibus nulla sunt,
+                                dolores ea nostrum veniam, consectetur
+                                voluptatum a porro minus ratione?
+                            </p>
+                        </div>
+                        <span class="bar"></span>
+
+                        <div>
+                            <h4>Update Privacy Policy</h4>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur,
+                                adipisicing elit. Adipisci iure delectus
+                                accusantium! Sint, vero cum.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="trending">
+                    <h3>Trending</h3>
+                    <div class="card">
+                        <div class="card-item2">
+                            <img
+                                src="/assets/icons/The Odin Project_logo.svg"
+                                alt=""
+                            />
+                            <h5>TheOdinProject</h5>
+                            <span>Good web development learn</span>
+                        </div>
+                        <div class="card-item2">
+                            <img
+                                src="/assets/icons/The Odin Project_logo.svg"
+                                alt=""
+                            />
+                            <h5>TheOdinProject</h5>
+                            <span>Good web development learn</span>
+                        </div>
+                        <div class="card-item2">
+                            <img
+                                src="/assets/icons/The Odin Project_logo.svg"
+                                alt=""
+                            />
+                            <h5>TheOdinProject</h5>
+                            <span>Good web development learn</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </main>
         <aside>
             <h1 class="sidebar-dashboard">
                 <a href="">
