--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <li>
                     <button id="theme" role="button" class="flip-box">
                         <div class="flip-box-inner">
-                            <div class="flip-box-front">
+                            <div class="flip-box-front" id="front">
                                 <svg
                                     xmlns="http://www.w3.org/2000/svg"
                                     viewBox="0 0 24 24"
@@ -31,7 +31,7 @@
                                     />
                                 </svg>
                             </div>
-                            <div class="flip-box-back">
+                            <div class="flip-box-back" id="back">
                                 <svg
                                     xmlns="http://www.w3.org/2000/svg"
                                     viewBox="0 0 24 24"
@@ -211,7 +211,7 @@
                                 alt=""
                             />
                             <h5>TheOdinProject</h5>
-                            <span>Good web development learn</span>
+                            <p>Good web development learn</p>
                         </div>
                         <div class="card-item2">
                             <img
@@ -219,7 +219,7 @@
                                 alt=""
                             />
                             <h5>TheOdinProject</h5>
-                            <span>Good web development learn</span>
+                            <p>Good web development learn</p>
                         </div>
                         <div class="card-item2">
                             <img
@@ -227,7 +227,7 @@
                                 alt=""
                             />
                             <h5>TheOdinProject</h5>
-                            <span>Good web development learn</span>
+                            <p>Good web development learn</p>
                         </div>
                     </div>
                 </div>
