--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
                             </p>
                         </div>
                         <span class="bar"></span>
-                        <div>
+                        <div class="card-item">
                             <h4>Comunity</h4>
                             <p>
                                 Officia exercitationem temporibus nulla sunt,
@@ -192,7 +192,7 @@
                         </div>
                         <span class="bar"></span>
 
-                        <div>
+                        <div class="card-item">
                             <h4>Update Privacy Policy</h4>
                             <p>
                                 Lorem ipsum dolor sit amet consectetur,
