--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="./assets/css/style.css" />
+        <link rel="stylesheet" href="./assets/css/style-reff.css" />
+        <script src="./assets/js/script.js" defer></script>
+        <script src="./assets/js/theme.js" defer></script>
         <title>Dashboard</title>
-        <link rel="stylesheet" href="/css/style.css" />
-        <link rel="stylesheet" href="/css/style-reff.css" />
-        <script src="/js/script.js" defer></script>
-        <script src="/js/theme.js" defer></script>
     </head>
     <body>
         <header>
@@ -80,7 +80,7 @@
         <div id="welcome">
             <h1 style="display: flex; align-items: center">
                 <img
-                    src="/icons/The Odin Project_logo.svg"
+                    src="./assets/icons/The Odin Project_logo.svg"
                     alt=""
                     style="width: 50px; height: 50px; display: inline"
                 />
@@ -207,7 +207,7 @@
                     <div class="card">
                         <div class="card-item2">
                             <img
-                                src="/icons/The Odin Project_logo.svg"
+                                src="./assets/icons/The Odin Project_logo.svg"
                                 alt=""
                             />
                             <h5>TheOdinProject</h5>
@@ -215,7 +215,7 @@
                         </div>
                         <div class="card-item2">
                             <img
-                                src="/icons/The Odin Project_logo.svg"
+                                src="./assets/icons/The Odin Project_logo.svg"
                                 alt=""
                             />
                             <h5>TheOdinProject</h5>
@@ -223,7 +223,7 @@
                         </div>
                         <div class="card-item2">
                             <img
-                                src="/icons/The Odin Project_logo.svg"
+                                src="./assets/icons/The Odin Project_logo.svg"
                                 alt=""
                             />
                             <h5>TheOdinProject</h5>
